edited many things, to match the Join Checkliste

--- a/assets/templates/side_menu.html
+++ b/assets/templates/side_menu.html
@@ -18,10 +18,10 @@
   </div>
   <div class="data">
     <div class="data_nav">
-      <a href="../../privacy_policy.html" id="navPP">Privacy Policy</a>
+      <a href="../../privacyPolicy.html" id="navPP">Privacy Policy</a>
     </div>
     <div class="data_nav">
-      <a href="../../legal_notice.html" id="navLN">Legal Notice</a>
+      <a href="../../legalNotice.html" id="navLN">Legal Notice</a>
     </div>
   </div>
 </nav>
