--- a/css/navbarSidebarMobile.css
+++ b/css/navbarSidebarMobile.css
@@ -34,6 +34,10 @@
         gap: 0px !important;
     }
 
+    .data {
+        display: none;
+    }
+
     .circle {
         width: 40px !important;
         height: 40px !important;
