--- a/css/navbarSidebarMobile.css
+++ b/css/navbarSidebarMobile.css
@@ -5,7 +5,7 @@
         position: fixed;
         bottom: 0 !important;
         height: 80px !important;
-        top: 94% !important;
+        top: auto !important;
     }
 
     .showAllContacts {
@@ -22,7 +22,7 @@
         position: fixed;
         bottom: 0 !important;
         height: 80px !important;
-        top: 92% !important;
+        top: auto !important;
     }
 }
 
@@ -58,7 +58,7 @@
         position: fixed;
         bottom: 0 !important;
         height: 80px !important;
-        top: 92%;
+        top: auto !important;
     }
 
     .sidebar_nav span {
@@ -105,7 +105,7 @@
     }
 
     .fixed-width-104 {
-        margin-right: 5% !important;
+        margin-right: 4% !important;
         display: flex;
     }
 
@@ -123,7 +123,6 @@
     .column {
         gap: 2% !important;
         left: 0px;
-        position: absolute;
     }
 
     .sidebar_nav {
@@ -136,11 +135,10 @@
     .column {
         gap: 8% !important;
         left: 0px;
-        position: absolute;
     }
 
     .fixed-width-104 {
-        margin-right: 0% !important;
+        margin-right: 4% !important;
     }
 
     .sidebar_nav {
@@ -154,6 +152,5 @@
     .column {
         gap: 4% !important;
         left: 0px;
-        position: absolute;
     }
 }
