Added Hover on addTask buttons

--- a/css/addTask.css
+++ b/css/addTask.css
@@ -150,6 +150,7 @@ li p {
     border-radius: 0;
     border-radius: 10px;
     border: 1px solid #d1d1d1;
+    cursor: pointer;
 }
 
 .subtaskPicker {
