--- a/css/board-Responsive.css
+++ b/css/board-Responsive.css
@@ -2,6 +2,7 @@
     .section-board{
         margin-left: 245px;
        width: 700px;
+       margin-bottom: 80px;
     }
 
     .fields{
@@ -65,6 +66,7 @@
     .section-board{
         margin-left: 20px;
        padding: 10px;
+       margin-bottom: 80px;
     }
 
     .technical-task-board{
@@ -169,6 +171,7 @@
     .section-board{
         padding: 16px;
         margin-top: 80px;
+        margin-bottom: 80px;
         width: 85vw;
         display: flex;
         flex-direction: column;
