--- a/assets/templates/side_menu.html
+++ b/assets/templates/side_menu.html
@@ -1,5 +1,5 @@
 <nav id="nav" class="sidebar column space-around">
-  <a href="../../login.html" class="center dontShowJoinLogoOnMobile">
+  <a href="https://join-140.developerakademie.net/Join-140/Login.html" class="center dontShowJoinLogoOnMobile">
     <img class="sidebar_logo dontShowJoinLogoOnMobile" src="./assets/img/sidebar_logo.png" />
   </a>
   <div class="column center-nav menu">
