--- a/css/logIn.css
+++ b/css/logIn.css
@@ -168,8 +168,13 @@ body {
 .rememberMe {
     display: flex;
     gap: 20px;
-    padding-left: 30px;
+    padding-left: 50px;
     height: 24px;
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    justify-content: flex-start !important;
+    width: 100%;
 }
 
 
@@ -313,3 +318,160 @@ body {
     font-size: 16px;
     color: #000;
   }
+
+
+  @media (max-width: 700px) {
+    .notAJoinUser {
+        position: fixed;
+        display: flex;
+        width: 100%;
+        height: 49px;
+        top: 76%;
+        right: 0%;
+        gap: 35px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #zielbereich {
+        position: absolute;
+        width: 100px;
+        height: 122px;
+        top: 10%;
+        left: 77px;
+    }
+    
+
+    .LogInField {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 106%;
+        height: 493px;
+        background-color: white;
+        border-radius: 30px;
+        padding: 48px, 115px, 48px, 115px;
+        gap: 32px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .LogInBottomLogIn {
+        height: 120px;
+        display: flex;
+        gap: 15px;
+        justify-content: center;
+        margin-top: 0px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logInButton {
+        background-color: rgb(42, 54, 71);
+        color: white;
+        width: 180px;
+        height: 80px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 8px;
+        gap: 10px;
+        font-size: 22px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    .guestLogInButton {
+        background-color: rgb(255, 255, 255);
+        color: rgb(42, 54, 71);
+        width: 180px;
+        height: 80px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 8px;
+        gap: 10px;
+        font-size: 22px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    .LogInField {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 106%;
+        height: 600px;
+        background-color: white;
+        border-radius: 30px;
+        padding: 48px, 115px, 48px, 115px;
+        gap: 32px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+}
+
+
+@media (max-width: 550px) {
+    .LogInField {
+        scale: 0.9;
+    }
+
+    .formLogIn {
+            width: 90%;
+            margin-right: 5%;
+    }
+}
+
+@media (max-width: 470px) {
+    .LogInField {
+        scale: 0.9;
+    }
+
+    .notAJoinUser {
+        gap: 10px;
+    }
+}
+
+    .emailPassword {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 422px;
+        height: 196px;
+        align-items: center;
+    }
+
+    .emailPasswordInputColumn {
+        display: flex;
+        flex-direction: column;
+        height: 152px;
+        justify-content: space-around;
+        width: 90%;
+    }
+
+@media (max-width: 470px) {
+    .emailPasswordInputColumn {
+        display: flex;
+        flex-direction: column;
+        height: 152px;
+        justify-content: space-around;
+        width: 80%;
+    }
+}
+
+@media (max-width: 430px) {
+    .emailPasswordInputColumn {
+        width: 90%;
+    }
+
+    .emailPassword {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 422px;
+        height: 196px;
+        align-items: center;
+        width: 100%;
+    }
+}
