--- a/css/logIn.css
+++ b/css/logIn.css
@@ -319,20 +319,7 @@ body {
     color: #000;
   }
 
-
-  @media (max-width: 700px) {
-    .notAJoinUser {
-        position: fixed;
-        display: flex;
-        width: 100%;
-        height: 49px;
-        top: 76%;
-        right: 0%;
-        gap: 35px;
-        align-items: center;
-        justify-content: center;
-    }
-
+  @media (min-height: 1305px) and (max-width: 1320px) {
     #zielbereich {
         position: absolute;
         width: 100px;
@@ -346,8 +333,49 @@ body {
         top: 50%;
         left: 45%;
     }
-    
 
+    .notAJoinUser {
+        position: fixed;
+        display: flex;
+        width: 100%;
+        height: 49px;
+        top: 74%;
+        right: 0%;
+        gap: 35px;
+        align-items: center;
+        justify-content: center;
+    }
+  }
+
+  @media (max-height: 945px) and (max-width: 700px) {
+    #zielbereich {
+        position: absolute;
+        width: 50px;
+        height: 70px;
+        top: 5% !important;
+        left: 77px;
+    }
+
+    #meinBild {
+        width: 70px !important;
+        top: 50%;
+        left: 45%;
+    }
+
+    .notAJoinUser {
+        position: fixed;
+        display: flex;
+        width: 100%;
+        height: 49px;
+        top: 83%;
+        right: 0%;
+        gap: 35px;
+        align-items: center;
+        justify-content: center;
+    }
+  }
+
+  @media (max-width: 700px) {
     .LogInField {
         display: flex;
         flex-direction: column;
