--- a/css/help.css
+++ b/css/help.css
@@ -19,6 +19,10 @@ body{
     align-items: center;
 }
 
+.space-between-help img{
+    cursor: pointer;
+}
+
 .width-100percent h1{
     font-weight: 700;
     font-size: 61px;
