--- a/css/navbarSidebarMobile.css
+++ b/css/navbarSidebarMobile.css
@@ -153,4 +153,10 @@
         gap: 4% !important;
         left: 0px;
     }
+
+    .help-section {
+        padding-top: 100px;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
 }
