--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -9,7 +9,7 @@
 
 <div id="help-menu-bar" class="help-click d-none">
   <a href="../../help.html" class="help-link"><img class="help-icon" src="./assets/img/help-icon.png">Help</a>
-  <a href="./legalNotice.html" id="navLN" class="help-link">Legal Notice</a>
-  <a href="./privacyPolicy.html" id="navPP" class="help-link">Privacy Policy</a>
+  <a href="../../legalNotice.html" id="navLN" class="help-link">Legal Notice</a>
+  <a href="../../privacyPolicy.html" id="navPP" class="help-link">Privacy Policy</a>
   <a href="./Login.html" class="help-link">Log out</a>
 </div>
