--- a/assets/templates/side_menu.html
+++ b/assets/templates/side_menu.html
@@ -18,10 +18,10 @@
   </div>
   <div class="data">
     <div class="data_nav">
-      <a href="../../privacyPolicy.html" id="navPP">Privacy Policy</a>
+      <a href="https://join-140.developerakademie.net/Join-140/privacyPolicy.html" id="navPP">Privacy Policy</a>
     </div>
     <div class="data_nav">
-      <a href="../../legalNotice.html" id="navLN">Legal Notice</a>
+      <a href="https://join-140.developerakademie.net/Join-140/legalNotice.html" id="navLN">Legal Notice</a>
     </div>
   </div>
 </nav>
