--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,15 +1,15 @@
 <header>
-  <a href="../../summary.html" rel="noopener noreferrer"><img class="JoinLogoHeaderImg" src="assets/img/JoinLogoMobile.png"></a>
+  <a href="https://join-140.developerakademie.net/Join-140/summary.html" rel="noopener noreferrer"><img class="JoinLogoHeaderImg" src="assets/img/JoinLogoMobile.png"></a>
   <span class="headline">Kanban Project Management Tool</span>
   <div class="center fixed-width-104">
-    <a href="../../help.html"><img class="help-icon" src="./assets/img/help-icon.png"></a>
+    <a href="https://join-140.developerakademie.net/Join-140/help.html"><img class="help-icon" src="./assets/img/help-icon.png"></a>
     <div onclick="showMenuBar()" class="circle"><span id="initials"></span></div>
   </div>
 </header>
 
 <div id="help-menu-bar" class="help-click d-none">
-  <a href="../../help.html" class="help-link"><img class="help-icon" src="./assets/img/help-icon.png">Help</a>
-  <a href="../../legalNotice.html" id="navLN" class="help-link">Legal Notice</a>
-  <a href="../../privacyPolicy.html" id="navPP" class="help-link">Privacy Policy</a>
-  <a href="./Login.html" class="help-link">Log out</a>
+  <a href="https://join-140.developerakademie.net/Join-140/help.html" class="help-link"><img class="help-icon" src="./assets/img/help-icon.png">Help</a>
+  <a href="https://join-140.developerakademie.net/Join-140/legalNotice.html" id="navLN" class="help-link">Legal Notice</a>
+  <a href="https://join-140.developerakademie.net/Join-140/privacyPolicy.html" id="navPP" class="help-link">Privacy Policy</a>
+  <a href="https://join-140.developerakademie.net/Join-140/Login.html" class="help-link">Log out</a>
 </div>
