--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -8,7 +8,7 @@
 </header>
 
 <div id="help-menu-bar" class="help-click d-none">
-  <a href="https://join-140.developerakademie.net/Join-140/help.html" class="help-link"><img class="help-icon" src="./assets/img/help-icon.png">Help</a>
+  <a href="https://join-140.developerakademie.net/Join-140/help.html" class="help-link">Help<img class="help-icon" src="./assets/img/help-icon.png"></a>
   <a href="https://join-140.developerakademie.net/Join-140/legalNotice.html" id="navLN" class="help-link">Legal Notice</a>
   <a href="https://join-140.developerakademie.net/Join-140/privacyPolicy.html" id="navPP" class="help-link">Privacy Policy</a>
   <a href="https://join-140.developerakademie.net/Join-140/Login.html" class="help-link">Log out</a>
