--- a/css/contacts.css
+++ b/css/contacts.css
@@ -4,6 +4,10 @@ body {
     height: 100vh;
 }
 
+button {
+    font-family: "Inter";
+}
+
 *::-webkit-scrollbar {
     height: 4px;
     width: 8px;
