--- a/css/logIn.css
+++ b/css/logIn.css
@@ -1,9 +1,12 @@
 body {
     margin: 0px;
-    font-family: "Inter", sans-serif;
+    font-family: "Inter";
     background-color: rgb(230, 228, 228);
 }
 
+button {
+    font-family: "Inter";
+}
 
 .centerAll{
     justify-content: center;
