--- a/css/signUp.css
+++ b/css/signUp.css
@@ -4,6 +4,9 @@ body {
     background-color: rgb(230, 228, 228);
 }
 
+button {
+    font-family: "Inter";
+}
 
 .centerAll{
     justify-content: center;
