--- a/css/logIn.css
+++ b/css/logIn.css
@@ -8,7 +8,7 @@ button {
     font-family: "Inter";
 }
 
-.centerAll{
+.centerAll {
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -26,22 +26,22 @@ button {
 }
 
 .blur {
-    opacity: 0; 
-    filter: blur(5px); 
-    transition: opacity 1s ease, filter 1s ease; 
-  }
+    opacity: 0;
+    filter: blur(5px);
+    transition: opacity 1s ease, filter 1s ease;
+}
 
 #meinBild {
     position: fixed;
     top: 35%;
     left: 45%;
-    width: 10%; 
-    transition: all 1s ease; 
-    z-index: 100; 
+    width: 10%;
+    transition: all 1s ease;
+    z-index: 100;
     object-fit: cover;
-  }
-  
-  #zielbereich {
+}
+
+#zielbereich {
     position: absolute;
     width: 100px;
     height: 122px;
@@ -107,18 +107,18 @@ button {
     display: flex;
 }
 
-.displayColumn{
+.displayColumn {
     display: flex;
     flex-direction: column;
 }
 
-.greeting{
+.greeting {
     font-weight: 500;
     font-size: 47px;
     color: #2A3647;
 }
 
-.greeting-name{
+.greeting-name {
     font-weight: 700;
     font-size: 64px;
     color: #29ABE2;
@@ -133,7 +133,7 @@ button {
 .emailPassword {
     display: flex;
     flex-direction: column;
-    justify-content:space-between;
+    justify-content: space-between;
     width: 422px;
     height: 196px;
 }
@@ -152,10 +152,10 @@ button {
 
 .inputfield-icon {
     position: absolute;
-    right: 15px; 
+    right: 15px;
     top: 50%;
-    transform: translateY(-50%); 
-    width: 26px; 
+    transform: translateY(-50%);
+    width: 26px;
 }
 
 .lock-icon:hover {
@@ -260,7 +260,8 @@ button {
 
 .guestLogInButton {
     background-color: rgb(255, 255, 255);
-    color: rgb(42, 54, 71);;
+    color: rgb(42, 54, 71);
+    ;
     width: 170px;
     height: 49px;
     display: flex;
@@ -275,11 +276,12 @@ button {
 
 
 .privacyPolicyLegalNotice {
+    font-size: 20px;
     display: flex;
     position: relative;
     width: 246px;
     height: 35px;
-    top: 12%;
+    top: 6%;
     justify-content: space-around;
 }
 
@@ -307,23 +309,23 @@ button {
 .custom-checkbox input {
     opacity: 0;
     position: absolute;
-  }
-  
+}
 
-  .custom-checkbox .checkmark {
+
+.custom-checkbox .checkmark {
     display: inline-block;
     top: 3px;
-    width: 15px; 
-    height: 15px; 
-    background: #fff; 
-    border: 3px solid #000; 
-    border-radius: 6px; 
+    width: 15px;
+    height: 15px;
+    background: #fff;
+    border: 3px solid #000;
+    border-radius: 6px;
     cursor: pointer;
     position: relative;
-  }
-  
+}
 
-  .custom-checkbox input:checked + .checkmark:after {
+
+.custom-checkbox input:checked+.checkmark:after {
     content: "\2713";
     position: absolute;
     left: 50%;
@@ -331,9 +333,9 @@ button {
     transform: translate(-50%, -50%);
     font-size: 16px;
     color: #000;
-  }
+}
 
-  @media (min-height: 1305px) and (max-width: 1320px) {
+@media (min-height: 1305px) and (max-width: 1320px) {
     #zielbereich {
         position: absolute;
         width: 100px;
@@ -359,9 +361,9 @@ button {
         align-items: center;
         justify-content: center;
     }
-  }
+}
 
-  @media (max-height: 945px) and (max-width: 700px) {
+@media (max-height: 945px) and (max-width: 700px) {
     #zielbereich {
         position: absolute;
         width: 50px;
@@ -387,9 +389,9 @@ button {
         align-items: center;
         justify-content: center;
     }
-  }
+}
 
-  @media (max-width: 700px) {
+@media (max-width: 700px) {
     .LogInField {
         display: flex;
         flex-direction: column;
@@ -466,8 +468,8 @@ button {
     }
 
     .formLogIn {
-            width: 90%;
-            margin-right: 5%;
+        width: 90%;
+        margin-right: 5%;
     }
 }
 
@@ -481,22 +483,22 @@ button {
     }
 }
 
-    .emailPassword {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 422px;
-        height: 196px;
-        align-items: center;
-    }
+.emailPassword {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 422px;
+    height: 196px;
+    align-items: center;
+}
 
-    .emailPasswordInputColumn {
-        display: flex;
-        flex-direction: column;
-        height: 152px;
-        justify-content: space-around;
-        width: 90%;
-    }
+.emailPasswordInputColumn {
+    display: flex;
+    flex-direction: column;
+    height: 152px;
+    justify-content: space-around;
+    width: 90%;
+}
 
 @media (max-width: 470px) {
     .emailPasswordInputColumn {
