--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,7 +1,7 @@
 body {
         margin: 0px;
         font-family: "Inter", sans-serif;
-        height: 89.8vh;
+        height: 100vh;
     }
 
 button {
@@ -46,11 +46,11 @@ button {
 .main {
     display: flex;
     position: relative;
-    top: 96px;
     left: 232px;
-    height: 89.2vh;
+    height: 100vh;
     width: 100%;
     right: 0px;
+    overflow: hidden;
 }
 
 .leftContainer {
@@ -64,6 +64,8 @@ button {
     box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.1);
     padding-left: 35px;
     padding-right: 35px;
+    top: 96px;
+    position: relative;
 }
 
 
@@ -72,6 +74,8 @@ button {
     width: 100%;
     background-color: rgb(246, 247, 248);
     flex-direction: column;
+    top: 96px;
+    position: relative;
 }
 
 
@@ -218,7 +222,7 @@ button {
     display: flex;
     position: relative;
     flex-direction: column;
-    height: 90%;
+    height: 81%;
     top: 25px;
     overflow-x: overlay;
 }
@@ -1059,16 +1063,46 @@ li {
     bottom: 0px;
 }
 
+@media (max-height: 600px) {
+    .showAllContacts {
+        height: 72%;
+    }
+}
 
+@media (max-height: 700px) {
+    .showAllContacts {
+        height: 76%;
+    }
+}
 
+@media (max-height: 800px) {
+    .showAllContacts {
+        height: 79%;
+    }
+}
+
+@media (min-height: 1000px) {
+    .showAllContacts {
+        height: 82%;
+    }
+}
+
+@media (min-height: 1100px) {
+    .showAllContacts {
+        height: 84%;
+    }
+}
+
+@media (min-height: 1200px) {
+    .showAllContacts {
+        height: 85%;
+    }
+}
 
 @media (min-height: 1305px) {
-    .main {
-        height: 92.6vh;
-    }
 
     .showAllContacts {
-        height: 93%;
+        height: 86%;
     }
 
     .leftrightContainer-edit {
@@ -1135,17 +1169,6 @@ li {
     }
 }
 
-@media (max-height: 945px) and (min-width: 1321px) {
-    .main {
-        display: flex;
-        position: relative;
-        top: 96px;
-        left: 232px;
-        height: 89.8vh;
-        width: 100%;
-        right: 0px;
-    }
-}
 
 @media (max-height: 945px) and (max-width: 1320px) {
     .sidebar {
@@ -1290,15 +1313,6 @@ li {
         padding: 0px;
     }
 
-    .main {
-        display: flex;
-        position: relative;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        height: 100vh;
-        justify-content: center;
-    }
 
     .addContactMobileImg {
         display: flex;
