--- a/css/board.css
+++ b/css/board.css
@@ -124,15 +124,18 @@ button {
     display: flex;
     width: auto;
     height: auto;
-    gap: 26px;
+    gap: 48px;
 }
 
+.card-board{
+    width: 200px;
+}
 
 .fields {
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 200px;
+    width: 100%;
     gap: 16px;
 }
 
@@ -157,8 +160,9 @@ box-shadow: rgba(0, 0, 0, 0.16);
 display: flex;
 justify-content: center;
 align-items: center;
-width: 110px;
 height: 48px;
+width: 100%;
+text-align: center;
 }
 
 .tasks-board{
@@ -170,8 +174,8 @@ box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
 display: flex;
 flex-direction: column;
 align-items: flex-start;
-width: auto;
 cursor: pointer;
+width: 100%;
 }
 
 .tasks-board:hover{
@@ -180,23 +184,6 @@ cursor: pointer;
 
 .height-board{
     height: 48px;
-}
-
-
-
-
-
-.tasks-board {
-    background-color: white;
-    border-radius: 24px;
-    padding: 16px;
-    gap: 10px;
-    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: auto;
-    cursor: pointer;
 }
 
 .height-board {
