--- a/css/navbarSidebarMobile.css
+++ b/css/navbarSidebarMobile.css
@@ -34,6 +34,12 @@
         gap: 0px !important;
     }
 
+    .sidebar_nav {
+        width: 100px !important;
+        padding: 0px !important;
+        height: 100%;
+    }
+
     .circle {
         width: 40px !important;
         height: 40px !important;
@@ -128,6 +134,12 @@
     .sidebar_nav {
         padding: 0px !important;
     }
+
+    .sidebar_nav {
+        width: 100px !important;
+        padding: 0px !important;
+        height: 100%;
+    }
 }
 
 
@@ -135,6 +147,12 @@
     .column {
         gap: 8% !important;
         left: 0px;
+    }
+
+    .sidebar_nav {
+        width: 100px !important;
+        padding: 0px !important;
+        height: 100%;
     }
 
     .fixed-width-104 {
