--- a/css/board.css
+++ b/css/board.css
@@ -17,6 +17,7 @@ button {
     margin-left: 328px;
     margin-right: 64px;
     margin-top: 206px;
+    margin-bottom: 206px;
 }
 
 .responsive-first-line{
