--- a/css/logIn.css
+++ b/css/logIn.css
@@ -524,6 +524,16 @@ button {
         justify-content: space-around;
         width: 80%;
     }
+
+    .privacyPolicyLegalNotice {
+        font-size: 20px;
+        display: flex;
+        position: relative;
+        width: 246px;
+        height: 35px;
+        top: 12%;
+        justify-content: space-around;
+    }
 }
 
 @media (max-width: 430px) {
@@ -539,5 +549,44 @@ button {
         height: 196px;
         align-items: center;
         width: 100%;
+    }
+}
+
+@media (max-width: 400px) and (max-height: 850px) {
+    #zielbereich {
+        position: absolute;
+        width: 50px;
+        height: 70px;
+        top: 2%;
+        left: 77px;
+    }
+
+    #meinBild {
+        width: 70px !important;
+        top: 50%;
+        left: 45%;
+    }
+}
+
+@media (max-width: 400px) and (max-height: 670px) {
+    .LogInField {
+        scale: 0.75;
+        top: 5%;
+        position: relative;
+    }
+
+    .notAJoinUser {
+        top: 87%;
+        scale: 0.9;
+    }
+
+    .privacyPolicyLegalNotice {
+        top: 3%;
+        scale: 0.8;
+    }
+
+    .formLogIn {
+        width: 90%;
+        margin-right: 0px;
     }
 }
