--- a/css/signUp.css
+++ b/css/signUp.css
@@ -572,5 +572,31 @@ button {
         font-weight: bold;
         cursor: pointer;
     }
+}
 
+@media (max-width: 400px) and (max-height: 850px) {
+    #zielbereich {
+        position: absolute;
+        width: 50px;
+        height: 70px;
+        top: 2% !important;
+        left: 77px;
+    }
+
+    #meinBild {
+        width: 60px !important;
+        top: 50%;
+        left: 45%;
+    }
+
+    .formSignUp {
+        width: 100%;
+        top: 5%;
+        position: absolute;
+    }
+
+    .privacyPolicyLegalNotice {
+        top: 40%;
+        scale: 0.9;
+    }
 }
