--- a/css/signUp.css
+++ b/css/signUp.css
@@ -93,14 +93,13 @@ button {
   }
 
 .overlay-signUp{
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     width: 100vw;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.1);
     overflow-y: hidden;
     display: flex;
     justify-content: center;
@@ -236,6 +235,21 @@ button {
 .signedUpSuccessfullyimg {
     width: 312px;
     height: 74px;
+}
+
+.signedUpSuccessfullyDiv {
+    z-index: 20;
+    animation: slide ease-in 800ms;
+    position: absolute;
+    top: 5% !important;
+}
+
+.justifyContent {
+    position: absolute;
+    top: 5%;
+    right: 0%;
+    width: 100%;
+    justify-content: end;
 }
 
 .titleLogIn {
@@ -532,6 +546,27 @@ button {
     .formSignUp {
         width: 100%;
     }
+
+    .signedUpSuccessfullyDiv {
+        z-index: 20;
+        animation: slide ease-in 800ms;
+        position: absolute;
+        top: 2% !important;
+    }
+
+    .justifyContent {
+        position: absolute;
+        top: 2%;
+        right: 0%;
+        width: 100%;
+        justify-content: end;
+    }
+
+    .signedUpSuccessfullyimg {
+        height: 74px;
+        width: 100%;
+        position: relative;
+    }
 }
 
 @media (max-width: 530px) {
@@ -596,7 +631,29 @@ button {
     }
 
     .privacyPolicyLegalNotice {
-        top: 40%;
+        top: 45%;
         scale: 0.9;
+    }
+
+    .signedUpSuccessfullyDiv {
+        z-index: 20;
+        animation: slide ease-in 800ms;
+        position: absolute;
+        top: 2% !important;
+    }
+
+    .justifyContent {
+        position: absolute;
+        top: 2%;
+        right: 0%;
+        width: 100%;
+        justify-content: end;
+    }
+
+    .signedUpSuccessfullyimg {
+        height: 64px;
+        width: 230px;
+        position: relative;
+        object-fit: cover;
     }
 }
