--- a/css/summaryResponsive.css
+++ b/css/summaryResponsive.css
@@ -155,3 +155,13 @@
         margin-top: 32px;
     }
 }
+
+@media (max-height: 1170px) {
+    .main-container {
+        margin-bottom: 0px;
+    }
+
+    .left-content {
+        margin-top: 50px;
+    }
+}
