--- a/css/addTaskResp.css
+++ b/css/addTaskResp.css
@@ -26,6 +26,15 @@
     .clearCreateButtonsContainer {
         position: static;
     }
+
+    .taskAddedMessageContainer {
+        height: 70%;
+    }
+
+    #taskAddedMessage {
+        padding-left: 0;
+        width: 400px;
+    }
 }
 
 
@@ -131,6 +140,11 @@
         width: 75px;
         height: 60px;
         border-radius: 12px;
+    }
+
+    #taskAddedMessage {
+        padding-left: 0;
+        width: 350px;
     }
 }
 
@@ -263,6 +277,11 @@
         width: 183px;
         height: 50px;
         font-size: 16px;
+    }
+
+    #taskAddedMessage {
+        padding-left: 0;
+        width: 300px;
     }
 
 }
