--- a/css/signUp.css
+++ b/css/signUp.css
@@ -382,7 +382,7 @@ button {
     font-size: 20px;
     display: flex;
     position: relative;
-    width: 246px;
+    width: 330px;
     height: 35px;
     top: 6%;
     justify-content: space-around;
@@ -469,7 +469,7 @@ button {
     .privacyPolicyLegalNotice {
         display: flex;
         position: relative;
-        width: 246px;
+        width: 330px;
         height: 35px;
         justify-content: space-around;
         color: #A8A8A8;
@@ -506,7 +506,6 @@ button {
     .privacyPolicyLegalNotice {
         display: flex;
         position: relative;
-        width: 246px;
         height: 35px;
         justify-content: space-around;
         color: #A8A8A8;
@@ -607,6 +606,14 @@ button {
         font-weight: bold;
         cursor: pointer;
     }
+
+    .joinLogoSignUp {
+        position: fixed;
+        width: 70px;
+        height: 85px;
+        top: 3% !important;
+        left: 77px;
+    }
 }
 
 @media (max-width: 400px) and (max-height: 850px) {
@@ -654,6 +661,15 @@ button {
         height: 64px;
         width: 230px;
         position: relative;
+        object-fit: cover;
+    }
+
+    .joinLogoSignUp {
+        position: fixed;
+        width: 50px;
+        height: 70px;
+        top: 2% !important;
+        left: 77px;
         object-fit: cover;
     }
 }
