--- a/css/signUp.css
+++ b/css/signUp.css
@@ -51,6 +51,7 @@ button {
 
 .highlight {
     color: #29ABE2;
+    text-decoration: none;
 }
 
 .highlight:hover {
@@ -449,12 +450,12 @@ button {
   }
 
 
-  @media (max-height: 945px) and (max-width: 800px) {
+  @media (max-height: 945px) and (max-width: 1000px) {
     #zielbereich {
         position: absolute;
         width: 50px;
         height: 70px;
-        top: 5% !important;
+        top: 1% !important;
         left: 77px;
     }
 
@@ -481,7 +482,7 @@ button {
         position: absolute;
         width: 50px;
         height: 70px;
-        top: 5% !important;
+        top: 1% !important;
         left: 77px;
     }
 
