--- a/css/signUp.css
+++ b/css/signUp.css
@@ -4,6 +4,10 @@ body {
     background-color: rgb(230, 228, 228);
 }
 
+input {
+    font-family: "Inter";
+}
+
 button {
     font-family: "Inter";
 }
