--- a/css/help.css
+++ b/css/help.css
@@ -1,6 +1,6 @@
 body{
     background-color: #F6F7F8;
-    font-family: "Inter", sans-serif;
+    font-family: 'Inter';
     overflow-x: hidden;
 }
 
