--- a/css/logIn.css
+++ b/css/logIn.css
@@ -8,6 +8,18 @@ button {
     font-family: "Inter";
 }
 
+textarea {
+    font-family: 'inter';
+}
+
+input {
+    font-family: 'inter';
+}
+
+select {
+    font-family: 'inter';
+}
+
 .centerAll {
     justify-content: center;
     align-items: center;
