--- a/css/board-showBig.css
+++ b/css/board-showBig.css
@@ -16,7 +16,7 @@
 
 .tasks-board-big {
     width: 20%;
-    height: 700px;
+    max-height: 700px;
     overflow-y: auto;
     border-radius: 30px;
     padding: 48px 40px 48px 40px;
@@ -237,7 +237,7 @@
     border-radius: 10px;
     overflow-y: auto;
     overflow-x: hidden;
-    height: 450px;
+    max-height: 450px;
 }
 
 ::-webkit-scrollbar {
