--- a/css/board.css
+++ b/css/board.css
@@ -125,7 +125,7 @@ button {
     display: flex;
     width: auto;
     height: auto;
-    gap: 48px;
+    gap: 56px;
 }
 
 .card-board{
@@ -157,12 +157,12 @@ border-radius: 10px;
 gap: 10px;
 background-color: #E7E7E7;
 color: #A8A8A8;
-box-shadow: rgba(0, 0, 0, 0.16);
+box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.16);
 display: flex;
 justify-content: center;
 align-items: center;
 height: 48px;
-width: 100%;
+width: 200px;
 text-align: center;
 }
 
@@ -176,7 +176,7 @@ display: flex;
 flex-direction: column;
 align-items: flex-start;
 cursor: pointer;
-width: 100%;
+width: 172px;
 }
 
 .tasks-board:hover{
@@ -214,7 +214,7 @@ width: 100%;
 .technical-task-board-big {
     background: #1FD7C1;
     border-radius: 8px;
-    padding: 4px 24px 4px 24px;
+    padding: 12px 24px 12px 24px;
     gap: 10px;
     color: white;
     width: 160px;
@@ -245,7 +245,7 @@ width: 100%;
 .technical-task-board {
     background: #1FD7C1;
     border-radius: 8px;
-    padding: 4px 16px 4px 16px;
+    padding: 8px 16px 8px 16px;
     gap: 10px;
     color: white;
     width: 113px;
@@ -297,8 +297,21 @@ width: 100%;
     color: black;
 }
 
+.card-board-title{
+    width: 100%;
+}
+
 .width-100percent {
     width: 100%;
+}
+
+.width-80percent{
+    width: 80%;
+}
+
+.flex-end{
+    display: flex;
+    justify-content: flex-end;
 }
 
 .margin-top-16 {
