--- a/css/summaryResponsive.css
+++ b/css/summaryResponsive.css
@@ -142,21 +142,37 @@
     }
 
     .flex-start-respo{
-        display: flex;
-        justify-content: flex-start;
         margin-top: 100px;
     }
 
     .main-container{
         display: flex;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
         margin-left: 20px;
         margin-top: 32px;
     }
 }
 
-@media (max-height: 1170px) {
+@media(max-width: 330px){
+    .left-content{
+        width: 280px;
+    }
+
+    .first-line{
+        width: 280px;
+    }
+
+    .second-line{
+        width: 280px;
+    }
+
+    .gap-13{
+        margin-right: 20px;
+    }
+}
+
+@media (max-width: 1170px) {
     .main-container {
         margin-bottom: 0px;
     }
