--- a/css/privacyPolicy.css
+++ b/css/privacyPolicy.css
@@ -62,8 +62,10 @@ a {
     right: 0;
     left: 232px;
     margin: 110px 0 0 96px;
-    max-width: 978px;
+    max-width: 1600px;
+    width: auto;
     gap: 32px;
+    margin-right: 64px;
 }
 
 .ppHeadlineContainer {
@@ -73,7 +75,7 @@ a {
     align-items: center;
     padding: 0px;
     gap: 30px;
-    width: 990px;
+    width: auto;
     height: 73px;
 }
 
@@ -110,7 +112,7 @@ a {
     align-items: flex-start;
     padding: 0px;
     gap: 24px;
-    width: 1014px;
+    width: auto;
     height: 720px;
     overflow: auto;
 }
