--- a/css/privacyPolicyResp.css
+++ b/css/privacyPolicyResp.css
@@ -1,19 +1,9 @@
-@media (max-width: 1350px) {
-    .ppHeadlineContainer {
-        width: 600px;
-    }
-
-    .ppContent {
-        width: 600px;
-    }
-}
-
 @media (max-width: 950px) {
     .privacyPolicyContentContainer {
         position: static;
         align-items: center;
         margin-left: 0;
-        padding-left: 0;
+        padding: 0 32px 0 32px;
     }
 
     .ppContent {
@@ -121,13 +111,12 @@
     }
 
     .privacyPolicyContentContainer {
-        width: 280px;
         margin-left: 16px;
         margin-right: 16px;
     }
 
     .ppContent {
-        width: 280px;
+        width: 90vw;
     }
 
     .ppContent h4 {
