--- a/css/help.css
+++ b/css/help.css
@@ -1,82 +1,89 @@
-body{
+body {
     background-color: #F6F7F8;
     font-family: 'Inter';
     overflow-x: hidden;
 }
 
-.help-section{
+.help-section {
     padding-top: 206px;
     padding-left: 328px;
     padding-right: 164px;
 }
 
-.width-100percent{
+.width-100percent {
     width: 100%;
 }
 
-.space-between-help{
+.space-between-help {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.space-between-help img{
+.space-between-help img {
     cursor: pointer;
 }
 
-.width-100percent h1{
+.width-100percent h1 {
     font-weight: 700;
     font-size: 61px;
 }
 
-.width-100percent img{
+.width-100percent img {
     width: 37px;
     height: 37px;
 }
 
-.margin-top-16{
+.margin-top-16 {
     margin-top: 16px;
 }
 
-.column-help{
+.column-help {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
 
-.space-between-flexstart-help{
+.space-between-flexstart-help {
     display: flex;
     justify-content: space-between;
 }
 
-.number{
+.number {
     font-weight: 700;
     font-size: 27px;
     width: 57px;
 }
 
-.flex-1{
+.flex-1 {
     flex: 1;
 }
 
-.blue-font{
+.blue-font {
     color: #29ABE2;
     font-weight: 400;
     font-size: 16px;
 }
 
-h3{
+h3 {
     font-weight: 700;
     font-size: 27px;
 }
 
-p{
+p {
     font-weight: 400;
     font-size: 16px;
 }
 
-span{
+span {
     font-weight: 700;
     font-size: 20px;
 }
 
+@media (max-width: 1320px) {
+    .help-section {
+        padding-top: 100px;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
