--- a/css/board.css
+++ b/css/board.css
@@ -189,6 +189,7 @@ flex-direction: column;
 align-items: flex-start;
 cursor: pointer;
 width: 172px;
+position: relative;
 }
 
 .tasks-board:hover{
