--- a/css/board.css
+++ b/css/board.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Inter", sans-serif;
+    font-family: 'Inter';
     overflow-x: hidden;
     max-width: 1400px;
     margin: 0 auto;
@@ -18,7 +18,7 @@ select {
 }
 
 button {
-    font-family: "Inter";
+    font-family: 'Inter';
 }
 
 #navBoard {
