--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,6 +1,6 @@
 body {
         margin: 0px;
-        font-family: "Inter", sans-serif !important;
+        font-family: 'Inter' !important;
         height: 100vh;
     }
 
